--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="new_task">Create new task</string>
     <string name="logout">Log Out</string>
     <string name="remove">REMOVE</string>
+    <string name="recipe_name"> Recipe name</string>
+    <string name="recipe_desc"> Description </string>
+    <string name="recipe_ingred"> Enter ingredients </string>
+    <string name="recipe_steps">Enter steps</string>
 </resources>
