--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Task Tracker</string>
+    <string name="app_name">FitShare App</string>
     <string name="username">Email</string>
     <string name="password">Password</string>
     <string name="create_account">Create account</string>
