--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,3 @@
 <resources>
-    <string name="app_name">Task Tracker</string>
-    <string name="username">Email</string>
-    <string name="password">Password</string>
-    <string name="create_account">Create account</string>
-    <string name="login">Login</string>
-    <string name="more">\u22EE</string>
-    <string name="new_task">Create new task</string>
-    <string name="logout">Log Out</string>
-    <string name="remove">REMOVE</string>
+    <string name="app_name">FitShare</string>
 </resources>
