--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="recipe_desc"> Description </string>
     <string name="recipe_ingred"> Enter ingredients </string>
     <string name="recipe_steps">Enter steps</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
